--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"homepage": "https://github.com/aposoftworks/yamiassu#readme",
 	"devDependencies": {
+		"@fortawesome/fontawesome-free": "^5.11.2",
 		"cross-env": "^5.2.1",
 		"laravel-mix": "^4.1.2",
 		"resolve-url-loader": "^3.1.0",
