--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "style",
-	"version": "1.0.0",
-	"description": "",
+	"name": "@aposoftworks/yamiassu",
+	"version": "0.1.0",
+	"description": "The default css styling framework used by Apo Softworks",
 	"main": "index.js",
 	"scripts": {
 		"dev": "npm run development",
